--- a/src/main/resources/templates/Cabecalho.html
+++ b/src/main/resources/templates/Cabecalho.html
@@ -8,7 +8,7 @@
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" href="#">
-                <img alt="AlgaWorks" src="/imagens/logo-algaworks.png" />
+                <img alt="AlgaWorks" th:src="@{/imagens/logo-algaworks.png}"/>
             </a>
         </div>
     </div>
