--- a/src/main/resources/templates/DialogoConfirmacaoExclusao.html
+++ b/src/main/resources/templates/DialogoConfirmacaoExclusao.html
@@ -7,7 +7,7 @@
 	data-keyboard="false" data-backdrop="static">
 	<div class="modal-dialog" role="document">
 
-		<form th:attr="data-url-base='/titulos'" method="POST" th:method="DELETE">
+		<form th:attr="data-url-base=@{/titulos}" method="POST" th:method="DELETE">
 			
 			<div class="modal-content">
 				<div class="modal-content">
