--- a/src/main/resources/templates/PesquisaTitulos.html
+++ b/src/main/resources/templates/PesquisaTitulos.html
@@ -31,7 +31,7 @@
 		   			</div>
 		   		</div>
 		   	</form>
-		
+		    <div class="table-responsive">
 			<table class="table table-bordered table-striped">
 				<thead>
 					<tr>
@@ -77,6 +77,7 @@
 					</tr>
 				</tbody>
 			</table>
+			</div>
 		</div>
 		<div th:replace="DialogoConfirmacaoExclusao"></div>
 	</div>
